--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,70 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="40dp"
+    android:orientation="vertical"
     tools:context="lightning.structby.whosup.LoginActivity">
 
-    <TextView
-        android:text="Email"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:id="@+id/emailLogintextView" />
+        android:orientation="vertical"
+        android:layout_weight="8">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Welcome back,"
+            android:textColor="#333333"
+            android:paddingTop="30dp"
+            android:paddingBottom="10dp"
+            android:layout_gravity="bottom"
+            android:textSize="40sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="sign in to continue"
+            android:textColor="#777777"
+            android:paddingBottom="30dp"
+            android:textSize="40sp"
+            android:layout_gravity="top" />
+
+    </LinearLayout>
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:layout_below="@+id/emailLogintextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:id="@+id/emailLogineditText" />
-
-    <TextView
-        android:text="Password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@+id/emailLogineditText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:id="@+id/passwordLogintextView" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:inputType="textEmailAddress"
+        android:paddingTop="20dp"
+        android:textSize="20sp"
+        android:layout_marginTop="50dp"
+        android:paddingBottom="10dp"
+        android:hint="E-mail"
+        android:layout_weight="2"/>
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/passwordLogintextView"
         android:id="@+id/passwordLogineditText"
-        android:layout_marginTop="16dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:inputType="textPassword"
+        android:textSize="20sp"
+        android:paddingTop="10dp"
+        android:paddingBottom="20dp"
+        android:hint="Password"
+        android:layout_weight="2"/>
+
 
     <Button
-        android:text="Login"
+        android:id="@+id/loginbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="33dp"
-        android:id="@+id/loginbutton"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:paddingLeft="0dp"
+        android:textSize="30sp"
+        android:textAllCaps="false"
+        android:textColor="@android:color/holo_blue_dark"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:text="Login"
+        android:layout_weight="6"
         android:onClick="login"/>
 
-    <TextView
-        android:text="Sign Up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/loginbutton"
-        android:layout_marginBottom="66dp"
-        android:id="@+id/signuptextView"
-        android:layout_centerHorizontal="true"
-        android:onClick="openSignUp"/>
-</RelativeLayout>
+    <LinearLayout
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:text="Don't have an account? "/>
+
+        <TextView
+            android:id="@+id/signuptextView"
+            android:text="Sign Up"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:textColor="@android:color/holo_blue_dark"
+            android:onClick="openSignUp"/>
+
+    </LinearLayout>
+
+</LinearLayout>
