--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -33,6 +33,7 @@
             android:paddingLeft="15dp"
             android:paddingRight="5dp"
             android:layout_weight="1"
+            fontPath="fonts/sfui.ttf"
             android:hint="Enter a message"
             android:background="@null"
             android:textSize="16sp" />
