--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -74,7 +74,8 @@
             android:id="@+id/card_holder"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal" />
+            android:orientation="horizontal"
+            android:onClick="openDetails"/>
 
     </HorizontalScrollView>
 
