--- a/app/src/main/res/layout/recycler_send_chat.xml
+++ b/app/src/main/res/layout/recycler_send_chat.xml
@@ -18,6 +18,7 @@
         android:layout_marginBottom="1dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
+        fontPath="fonts/sfui.ttf"
         android:minHeight="40dp"
         android:gravity="center_vertical|left"
         android:layout_marginLeft="50dp"
