--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -106,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
                 android:layout_margin="10dp"
-                fontPath="fonts/proximanova.otf"
+                fontPath="fonts/sfui.ttf"
                 android:textColor="#444444"
                 android:textSize="18sp"
                 android:text="@string/desc"/>
