--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -138,7 +138,7 @@
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     android:id="@+id/people1"
-                    android:src="@drawable/person"
+                    android:src="@drawable/defaultdp"
                     app:riv_corner_radius="10dp"
                     app:riv_mutate_background="true"
                     android:layout_marginLeft="10dp"
@@ -148,7 +148,7 @@
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     android:id="@+id/people2"
-                    android:src="@drawable/person"
+                    android:src="@drawable/defaultdp"
                     app:riv_corner_radius="10dp"
                     app:riv_mutate_background="true"
                     android:layout_marginLeft="10dp"
@@ -157,7 +157,7 @@
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     android:id="@+id/people3"
-                    android:src="@drawable/person"
+                    android:src="@drawable/defaultdp"
                     app:riv_corner_radius="10dp"
                     app:riv_mutate_background="true"
                     android:layout_marginLeft="10dp"
