--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -64,6 +64,33 @@
         android:scaleType="centerCrop"
         android:onClick="openProfile"/>
 
+
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/card_scroll_view"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="-20dp"
+        android:background="#80aaaaaa"
+        app:riv_corner_radius_bottom_left="10dip"
+        app:riv_corner_radius_top_left="10dip"
+        app:riv_mutate_background="true"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false"
+        android:scaleType="centerCrop" />
+
+    <ImageButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/plus_button"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/card_scroll_view"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="15dp"
+        android:onClick="addEvent"/>
+
+
     <HorizontalScrollView
         android:id="@+id/card_scroll_view"
         android:layout_width="match_parent"
