--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -30,7 +30,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@drawable/person"
+            android:src="@drawable/defaultdp"
             app:riv_corner_radius_bottom_left="10dip"
             app:riv_corner_radius_bottom_right="10dip"
             app:riv_mutate_background="true"
