--- a/app/src/main/res/layout/map_event_fragment.xml
+++ b/app/src/main/res/layout/map_event_fragment.xml
@@ -53,7 +53,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/people1"
-        android:src="@drawable/person"
+        android:src="@drawable/defaultdp"
         app:riv_corner_radius="5dip"
         app:riv_mutate_background="true"
         android:layout_alignParentTop="true"
@@ -69,7 +69,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/people2"
-        android:src="@drawable/person"
+        android:src="@drawable/defaultdp"
         app:riv_corner_radius="5dip"
         app:riv_mutate_background="true"
         android:layout_alignParentTop="true"
