--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -35,6 +35,7 @@
             android:layout_weight="1"
             fontPath="fonts/sfui.ttf"
             android:hint="Enter a message"
+            android:inputType="textCapSentences"
             android:background="@null"
             android:textSize="16sp" />
 
