--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_chat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/chat_bg"
+    android:background="#eeeeee"
     android:orientation="vertical"
     tools:context="lightning.structby.whosup.ChatActivity">
 
@@ -21,8 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-
-        android:elevation="3dp"
+        android:elevation="5dp"
         android:padding="5dp"
         android:background="@drawable/message_send">
 
@@ -35,7 +34,7 @@
             android:layout_weight="1"
             fontPath="fonts/sfui.ttf"
             android:hint="Enter a message"
-            android:inputType="textCapSentences"
+            android:inputType="textMultiLine"
             android:background="@null"
             android:textSize="16sp" />
 
