--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -56,8 +56,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
+                fontPath="fonts/sfui.ttf"
+                android:textColor="#222222"
                 android:text="Name"
-                android:textSize="24sp"
+                android:textSize="30sp"
                 android:textStyle="normal"
                 android:background="@android:color/transparent"/>
 
@@ -68,14 +70,15 @@
             android:id="@+id/user_profile_short_bio"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            fontPath="fonts/sfui.ttf"
             android:layout_below="@+id/profile_layout"
             android:background="@android:color/transparent"
             android:inputType="textMultiLine"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
             android:text="@string/loremText"
             android:textColor="@color/bodyTextColor"
-            android:textSize="14sp" />
+            android:textSize="20sp" />
 
     </RelativeLayout>
 </ScrollView>
