--- a/app/src/main/res/layout/recycler_receive_chat.xml
+++ b/app/src/main/res/layout/recycler_receive_chat.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="2dp"
-    android:layout_marginLeft="5dp">
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginLeft="5dp"
+    android:id="@+id/messageLayout">
 
             <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/userProfile"
