--- a/app/src/main/res/layout/recycler_send_chat.xml
+++ b/app/src/main/res/layout/recycler_send_chat.xml
@@ -5,7 +5,8 @@
     android:layoutDirection="rtl"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="2dp"
-    android:layout_marginRight="10dp">
+    android:layout_marginRight="10dp"
+    android:id="@+id/messageLayout">
 
 
     <TextView
