Modify chat message style

--- a/app/src/main/res/layout/recycler_send_chat.xml
+++ b/app/src/main/res/layout/recycler_send_chat.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="5dp"
     android:layout_marginBottom="2dp"
     android:layout_marginRight="10dp"
-    android:id="@+id/messageLayout">
+    android:id="@+id/sendMessageLayout">
 
 
     <TextView
