--- a/app/src/main/res/layout/recycler_receive_chat.xml
+++ b/app/src/main/res/layout/recycler_receive_chat.xml
@@ -5,7 +5,7 @@
     android:layout_marginTop="2dp"
     android:layout_marginBottom="5dp"
     android:layout_marginLeft="5dp"
-    android:id="@+id/messageLayout">
+    android:id="@+id/receiveMessageLayout">
 
             <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/userProfile"
